--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,9 @@
-<p>home works!</p>
+<h1 mat-display-1>Newest Authors</h1>
+<hr>
+
+<div class="newest-authors-list">
+    <div class="item">
+        <spiget-author-card [id]="342233"></spiget-author-card>
+        <spiget-author-card [id]="342233"></spiget-author-card>
+    </div>
+</div>
