Implement new resources in the home page

--- a/src/app/author-card/author-card.component.html
+++ b/src/app/author-card/author-card.component.html
@@ -9,7 +9,7 @@
     <!-- Failed to load -->
     <ng-template [ngIf]="!loading && error">
         <mat-icon>error</mat-icon>
-        <h2 class="error" mat-h2>Failed to load the author</h2>
+        <h2 class="error" mat-h2>Failed to load the author!</h2>
     </ng-template>
 
     <!-- Loaded-->
