--- a/src/app/author-card/author-card.component.scss
+++ b/src/app/author-card/author-card.component.scss
@@ -29,7 +29,7 @@
         min-height: 64px;
         max-height: 64px;
         border: 1px solid black;
-        border-radius: 15px;
+        border-radius: 50%;
     }
 
 
