--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,9 +1,22 @@
-<h1 mat-display-1>Newest Authors</h1>
-<hr>
+<div class="container">
+    <h1 mat-display-1>New Authors</h1>
+    <hr>
 
-<div class="newest-authors-list">
-    <div class="item">
-        <spiget-author-card [id]="342233"></spiget-author-card>
-        <spiget-author-card [id]="342233"></spiget-author-card>
+    <div class="list">
+        <div class="item">
+            <spiget-author-card [id]="342233"></spiget-author-card>
+            <spiget-author-card [id]="342233"></spiget-author-card>
+        </div>
+    </div>
+</div>
+
+<div class="container">
+    <h1 mat-display-1>New Resources</h1>
+    <hr>
+
+    <div class="list">
+        <div class="item">
+            <spiget-resource-card></spiget-resource-card>
+        </div>
     </div>
 </div>
