--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,17 +1,21 @@
-.newest-authors-list {
-    display: flex;
-    flex-direction: column;
+.container {
+    margin-bottom: 1.5em;
 
-    .item {
+    .list {
         display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: flex-start;
-
-        spiget-author-card {
-            width: 100%;
-            margin: 0 1.25em 0 1.25em;
+        flex-direction: column;
+    
+        .item {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: flex-start;
+    
+            * {
+                width: 100%;
+                margin: 0 1.25em 0 1.25em;
+            }
         }
+    
     }
-
 }
