Implement updated resources in the home page
- Improve the design of resource card
- Split the resources section into new and updated
- Add icon to the resource card
- Add ripple to the resource card

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,13 +10,25 @@
     </div>
 </div>
 
-<div class="container">
-    <h1 mat-display-1>New Resources</h1>
-    <hr>
-
-    <div class="list">
-        <div class="item">
-            <spiget-resource-card></spiget-resource-card>
+<div class="resources">
+    <div class="container">
+        <h1 mat-display-1>New Resources</h1>
+        <hr>
+    
+        <div class="list">
+            <div class="item">
+                <spiget-resource-card></spiget-resource-card>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <h1 mat-display-1>Updated Resources</h1>
+        <hr>
+    
+        <div class="list">
+            <div class="item">
+                <spiget-resource-card></spiget-resource-card>
+            </div>
         </div>
     </div>
 </div>
