--- a/src/app/resource-card/resource-card.component.scss
+++ b/src/app/resource-card/resource-card.component.scss
@@ -4,7 +4,8 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    padding: .75em 1em .5em .75em;
+    padding-top: .5em;
+    padding-bottom: .5em;
 
     &.container-active {
         flex-direction: column;
@@ -23,6 +24,12 @@
         margin-left: 1em;
     }
 
+    p {
+        margin-left: 5px;
+        margin-right: 5px;
+        text-align: center;
+    }
+
     .author, .info {
         display: flex;
         flex-direction: row;
@@ -31,6 +38,16 @@
 
     .info {
         justify-content: space-between;
+
+        img {
+            $size: 32px;
+            min-width: $size;
+            max-width: $size;
+            min-height: $size;
+            max-height: $size;
+
+            margin-right: 1em;
+        }
 
         h1, h4 {
             margin-bottom: 0;
@@ -46,7 +63,9 @@
     }
 
     .author {
-        justify-content: center;
+        width: 100%;
+        justify-content: flex-end;
+        margin-right: 2em;
 
         h4 {
             margin-left: .5em;
