Isolate lists in its component + Fetch authors
- Fetch the latest authors from Spiget
- Isolate the latest/updated resources in a list component
- Isolate the latest the authors in a list component

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,13 +1,8 @@
 <div class="container">
-    <h1 mat-display-1>New Authors</h1>
+    <h1 mat-display-1>Latest Authors</h1>
     <hr>
 
-    <div class="list">
-        <div class="item">
-            <spiget-author-card [id]="342233"></spiget-author-card>
-            <spiget-author-card [id]="342233"></spiget-author-card>
-        </div>
-    </div>
+    <spiget-author-card-list></spiget-author-card-list>
 </div>
 
 <div class="resources">
@@ -15,20 +10,12 @@
         <h1 mat-display-1>New Resources</h1>
         <hr>
     
-        <div class="list">
-            <div class="item">
-                <spiget-resource-card></spiget-resource-card>
-            </div>
-        </div>
+        <spiget-resource-card-list></spiget-resource-card-list>
     </div>
     <div class="container">
         <h1 mat-display-1>Updated Resources</h1>
         <hr>
     
-        <div class="list">
-            <div class="item">
-                <spiget-resource-card></spiget-resource-card>
-            </div>
-        </div>
+        <spiget-resource-card-list></spiget-resource-card-list>
     </div>
 </div>
