Fetch the latest resources
- Fix: Author not found icon
- Remove loading from resoruce card
- Fetch latest resources
- Implement premium status in the resoruce card
- Fix: author card doesn't have matRipple

--- a/src/app/author-card/author-card.component.html
+++ b/src/app/author-card/author-card.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div matRipple class="container">
     <img class="icon" [src]="iconUrl" alt="Author Icon">
         <h2>{{ name }}</h2>
         <div></div>
