--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,12 +10,12 @@
         <h1 mat-display-1>New Resources</h1>
         <hr>
     
-        <spiget-resource-card-list></spiget-resource-card-list>
+        <spiget-resource-card-list [type]="'latest'"></spiget-resource-card-list>
     </div>
     <div class="container">
         <h1 mat-display-1>Updated Resources</h1>
         <hr>
     
-        <spiget-resource-card-list></spiget-resource-card-list>
+        <spiget-resource-card-list [type]="'updated'"></spiget-resource-card-list>
     </div>
 </div>
