--- a/src/app/resource-card-list/resource-card-list.component.html
+++ b/src/app/resource-card-list/resource-card-list.component.html
@@ -11,7 +11,5 @@
 </div>
 
 <div class="list" *ngIf="!loading && !error">
-    <div class="item">
-        <spiget-resource-card></spiget-resource-card>
-    </div>
+    <spiget-resource-card class="item" *ngFor="let card of cards" [resource]="card.resource" [version]="card.version" [author]="card.author"></spiget-resource-card>
 </div>
