--- a/src/app/resource-card/resource-card.component.scss
+++ b/src/app/resource-card/resource-card.component.scss
@@ -2,21 +2,17 @@
     width: 100%;
     display: flex;
     flex-direction: row;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     padding-top: .5em;
     padding-bottom: .5em;
+    transition: .5s;
 
-    &.container-active {
-        flex-direction: column;
-        justify-content: center;
-        transition: .5s;
-
-        &:hover {
-            cursor: pointer;
-            background-color: lightgray;
-            border-radius: 10px;
-        }
+    &:hover {
+        cursor: pointer;
+        background-color: lightgray;
+        border-radius: 10px;
     }
 
     h2, h4 {
@@ -30,7 +26,7 @@
         text-align: center;
     }
 
-    .author, .info {
+    .footer > .author, .info {
         display: flex;
         flex-direction: row;
         align-items: center;
@@ -62,24 +58,52 @@
         }
     }
 
-    .author {
+    .footer {
         width: 100%;
-        justify-content: flex-end;
-        margin-right: 2em;
+        display: grid;
+        grid-template-columns: auto auto;
 
-        h4 {
-            margin-left: .5em;
+        .type {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: flex-start;
+
+            .premium, .free {
+                color: white;
+                border: 1px solid black;
+                border-radius: 5px;
+                padding: 2px 10px 2px 10px;
+            }
+
+            .premium {
+                background-color: orange;
+            }
+
+            .free {
+                background-color: gray;
+            }
         }
 
-        img {
-            $size: 32px;
-            min-width: $size;
-            max-width: $size;
-            min-height: $size;
-            max-height: $size;
-
-            border: 1px solid black;
-            border-radius: 50%;
+        .author {
+            width: 100%;
+            justify-content: flex-end;
+            margin-right: 2em;
+    
+            h4 {
+                margin-left: .5em;
+            }
+    
+            img {
+                $size: 32px;
+                min-width: $size;
+                max-width: $size;
+                min-height: $size;
+                max-height: $size;
+    
+                border: 1px solid black;
+                border-radius: 50%;
+            }
         }
     }
 
